<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_recipe_steps_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeStepsActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_ingredient_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recycler_view_ingredient_head">

        </android.support.v7.widget.RecyclerView>


</RelativeLayout>
