...
            android:background="@drawable/back_icon"
            android:backgroundTintMode="src_over"
            android:elevation="6dp"
            android:padding="40dp" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:background="@drawable/forward_icon"
            android:backgroundTintMode="src_over"
            android:padding="40dp" />
...
